added swagger docs #2
